# agent-octo

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Earthfile  Justfile  README.md  SYSTEM_PROMPT.md  index.html  octo-tmux.sh  tmux.conf
.agents/skills/ui-crud/: SKILL.md
.devcontainer/: .bash_aliases  devcontainer.json  layout.kdl
.devcontainer/.githooks/: pre-commit
.github/workflows/: README.md  ci.yml  release-candidate.yml  release.yml
a2ui-test/: chat-demo.ts  index.html  main.ts  package-lock.json  package.json  tsconfig.json  vite.config.js
a2ui-test/src/: a2ui-default-theme.ts
crates/agent-octo-com/: .gitignore  Cargo.toml  Justfile  input.css
crates/agent-octo-com/assets/: asciinema-init.js  openai-api-final.cast  openai-api-tool.cast  openai-api.cast
crates/agent-octo-com/content/blog/agentic-sandboxes/: index.md
crates/agent-octo-com/open-api-specs/: airtable.json  appollo.json  dropbox.json
crates/agent-octo-com/open-api-specs/google/: calendar.json  contacts.json  drive.json
crates/agent-octo-com/open-api-specs/search/: serper-search.json
crates/agent-octo-com/src/: blog_summary.rs  generator.rs  main.rs  ui_links.rs
crates/agent-octo-com/src/components/: capabilities_section.rs  hero_section.rs  homepage_hero_section.rs  homepage_why_section.rs  mod.rs  platform_section.rs  site_card.rs
crates/agent-octo-com/src/pages/: index.rs  mod.rs  open_api_specs.rs  pricing.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: config.rs  lib.rs  main.rs  provider.rs  system_prompt.rs
crates/channels/: Cargo.toml
crates/channels/src/: config.rs  lib.rs  telegram.rs
crates/channels/src/telegram/: egress.rs  ingress.rs  ingress_polling.rs  mod.rs
crates/clorinde/src/: queries.rs
crates/clorinde/src/queries/: auth.rs
crates/db/: README.md  dev_setup.sh
crates/db-gen/: Cargo.toml
crates/db-gen/src/: queries.rs  types.rs
crates/db-gen/src/queries/: agents.rs  auth.rs  billing.rs  channels.rs  channels_list.rs  orgs.rs  providers.rs
crates/db/migrations/: 20260301162355_auth_schema.sql  20260302075700_org_schema.sql  20260302075800_channel-messages.sql  20260302075800_core.sql  20260303131150_providers.sql  20260303131151_resource_visibility.sql  20260303131152_agents.sql  20260303131153_conversations.sql  20260303133215_providers.sql  20260303133535_agents.sql  20260303134005_channels.sql  20260303134424_integrations.sql  20260303150830_channel-routing-model.sql
crates/db/queries/: agents.sql  auth.sql  billing.sql  channels.sql  channels_list.sql  orgs.sql  providers.sql
crates/db/src/: lib.rs
crates/octo/: Cargo.toml  SYSTEM_PROMPT.md
crates/octo-assets/: build.rs  input.css
crates/octo-islands/: Cargo.toml
crates/octo-islands/src/: lib.rs  modal.rs
crates/octo-islands/src/hydrators/: data_target.rs  mod.rs
crates/octo-ui/: Cargo.toml
crates/octo-ui/src/: base_layout.rs  layout.rs  lib.rs  root.rs  routes.rs
crates/octo-ui/src/agents/: page.rs  pages.rs
crates/octo-ui/src/channels/: page.rs  pages.rs
crates/octo-ui/src/components/: card_item.rs  mod.rs  section_introduction.rs
crates/octo-ui/src/connections/: new.rs  page.rs
crates/octo-ui/src/integrations/: page.rs  upsert.rs
crates/octo-ui/src/providers/: new.rs  page.rs  pages.rs
crates/octo/src/: agents.rs  authz.rs  config.rs  errors.rs  jwt.rs  main.rs  root.rs  stripe.rs
crates/octo/src/handlers/: agents.rs  channels.rs  integrations.rs  mod.rs  providers.rs  root.rs
crates/octo/src/handlers/agents/: loaders.rs
crates/octo/src/handlers/billing/: actions.rs  loaders.rs
crates/octo/src/handlers/channels/: actions.rs  loaders.rs
crates/octo/src/handlers/connections/: actions.rs  loaders.rs
crates/octo/src/handlers/integrations/: actions.rs  loaders.rs
crates/octo/src/handlers/providers/: actions.rs  loaders.rs
infra-as-code/: docker-compose.yaml  stack.yaml
infra-as-code/postgres-init/: 00-demo-roles.sql
plugins/: bitcoin.json
scripts/: README.md  nails
src/: bitcoin_price.rs  main.rs  monty_python.rs  openapi_actions.rs
web/: index.html  script.js  styles.css
wireframe/: README.md  account.html  app.js  billing.html  dashboard.html  databases.html  index.html  input.css  integrations.html  knowledge-item.html  knowledge.html  memory.html  scheduled-tasks.html  settings.html  spaces.html  team.html  teams.html  usage.html  users.html  wireframe-tmux.sh
