[package]
name = "workspace"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
monty = { git = "https://github.com/pydantic/monty" }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
rig-core = "0.31.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
teloxide = { version = "0.17.0", default-features = false, features = ["rustls", "ctrlc_handler"] }
thiserror = "2.0.12"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
