[package]
name = "channels"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
db = { path = "../db" }
dotenvy.workspace = true
native-tls.workspace = true
serde_json.workspace = true
supabase-client-realtime.workspace = true
teloxide.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
