[package]
name = "channels"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
db = { path = "../db" }
dotenvy.workspace = true
native-tls.workspace = true
serde_json.workspace = true
teloxide.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = "1.21.0"
