[package]
name = "octo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", default-features = false, features = ["json", "http1", "tokio"] }
axum-extra = { version = "0.12", features = ["form", "typed-routing"] }
base64 = "0.22.1"
clorinde = { version = "0.0.0", path = "../db-gen" }
db = { path = "../db" }
dotenvy.workspace = true
octo-assets = { path = "../octo-assets" }
octo-ui = { path = "../octo-ui" }
oas3.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { features = ["fs", "macros", "rt-multi-thread"], version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
tower-livereload = "0.10"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = "1"
